# damn-yankee

./: .gitignore  Dockerfile  pyproject.toml
scripts/: docker-build.ps1  docker-run.ps1  run-label-studio.ps1
scripts/bash/: mv-rename-imgs.sh  split-train-test.sh
scripts/python/: remove_file_prefix.py  split_img_train_test.py
src/damn_yankee/: __init__.py  logger.py
src/damn_yankee/clean/: pdf_to_png.py
src/damn_yankee/ocr/: png_to_txt.py
src/damn_yankee/scripts/: pdfs_to_pngs.py
